[gd_scene load_steps=32 format=3 uid="uid://buvg5dlmntysp"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_64v5j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d7lqf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6iku8"]

[sub_resource type="Animation" id="Animation_l356i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.475393, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D/Hitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1.3, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area3D/Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cam_pivot/FPS_view:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area3D/Hitbox:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1knex"]
resource_name = "crouch_idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.0433964, 0), Vector3(0, 0.0433964, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D/Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/Hitbox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.7, 1)]
}

[sub_resource type="Animation" id="Animation_ta0jl"]
resource_name = "head_bob"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.475393, 0), Vector3(0, 0.403027, 0), Vector3(0, 0.475393, 0), Vector3(0, 0.403027, 0), Vector3(0, 0.475393, 0)]
}

[sub_resource type="Animation" id="Animation_ffj7m"]
resource_name = "jump"

[sub_resource type="Animation" id="Animation_03apn"]
resource_name = "lean_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.475393, 0), Vector3(-0.612, 0.475, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cam_pivot/FPS_view:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0872665)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.2, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area3D/Hitbox:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.523599)]
}

[sub_resource type="Animation" id="Animation_g2ee5"]
resource_name = "lean_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.475393, 0), Vector3(0.611753, 0.475393, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cam_pivot/FPS_view:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0872665)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.2, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area3D/Hitbox:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.523599)]
}

[sub_resource type="Animation" id="Animation_vght8"]
resource_name = "mantle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.475393, 0), Vector3(0, 1, 0), Vector3(0, 0.737697, 0), Vector3(0, 0.475393, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cam_pivot/FPS_view:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.523599, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_m7p6g"]
resource_name = "standing_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/FPS_view:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.475393, 0), Vector3(0, 0.475393, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkaml"]
_data = {
"RESET": SubResource("Animation_l356i"),
"crouch_idle": SubResource("Animation_1knex"),
"head_bob": SubResource("Animation_ta0jl"),
"jump": SubResource("Animation_ffj7m"),
"lean_left": SubResource("Animation_03apn"),
"lean_right": SubResource("Animation_g2ee5"),
"mantle": SubResource("Animation_vght8"),
"standing_idle": SubResource("Animation_m7p6g")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0m61l"]
animation = &"crouch_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nh203"]
animation = &"head_bob"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oupch"]
animation = &"lean_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ji5ft"]
animation = &"lean_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aetle"]
animation = &"mantle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8mi8p"]
animation = &"standing_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0u38w"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xlw58"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ldwkr"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xnq3r"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cxgn6"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6aexh"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w1gb2"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oeijl"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cmx7i"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rp4l5"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gr3fk"]
states/crouch_idle/node = SubResource("AnimationNodeAnimation_0m61l")
states/crouch_idle/position = Vector2(767, 3)
states/head_bob/node = SubResource("AnimationNodeAnimation_nh203")
states/head_bob/position = Vector2(499, -76)
states/lean_left/node = SubResource("AnimationNodeAnimation_oupch")
states/lean_left/position = Vector2(336, 301)
states/lean_right/node = SubResource("AnimationNodeAnimation_ji5ft")
states/lean_right/position = Vector2(347, -248)
states/mantle/node = SubResource("AnimationNodeAnimation_aetle")
states/mantle/position = Vector2(615, 162)
states/standing_idle/node = SubResource("AnimationNodeAnimation_8mi8p")
states/standing_idle/position = Vector2(336, 3)
transitions = ["standing_idle", "crouch_idle", SubResource("AnimationNodeStateMachineTransition_0u38w"), "crouch_idle", "standing_idle", SubResource("AnimationNodeStateMachineTransition_xlw58"), "standing_idle", "lean_left", SubResource("AnimationNodeStateMachineTransition_ldwkr"), "lean_left", "standing_idle", SubResource("AnimationNodeStateMachineTransition_xnq3r"), "standing_idle", "lean_right", SubResource("AnimationNodeStateMachineTransition_cxgn6"), "lean_right", "standing_idle", SubResource("AnimationNodeStateMachineTransition_6aexh"), "standing_idle", "mantle", SubResource("AnimationNodeStateMachineTransition_w1gb2"), "mantle", "standing_idle", SubResource("AnimationNodeStateMachineTransition_oeijl"), "standing_idle", "head_bob", SubResource("AnimationNodeStateMachineTransition_cmx7i"), "head_bob", "standing_idle", SubResource("AnimationNodeStateMachineTransition_rp4l5")]
graph_offset = Vector2(-26, -63)

[sub_resource type="BoxShape3D" id="BoxShape3D_hyht8"]
size = Vector3(1, 1.3, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uushi"]
height = 1.5
radius = 0.3

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_64v5j")

[node name="cam_pivot" type="Node3D" parent="."]

[node name="FPS_view" type="Camera3D" parent="cam_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.475393, 0)

[node name="standing_col" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_d7lqf")

[node name="crouch_col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.50667, 0)
shape = SubResource("SphereShape3D_6iku8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kkaml")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_gr3fk")
anim_player = NodePath("../AnimationPlayer")

[node name="Area3D" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_hyht8")

[node name="above_head" type="Area3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1.19993, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="above_head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5254e-08, -0.517645, 0)
shape = SubResource("CylinderShape3D_uushi")

[node name="all_raycast" type="Node3D" parent="."]

[node name="head_cast" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, -3.59989e-21, 4.37114e-08, 1, -4.37114e-08, 0, 0.997085, 0)

[node name="head_cast2" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.09865e-15, 2.5134e-08, 0.575, 0.575, -2.5134e-08, -2.06994e-21, 2.5134e-08, 0.575, -2.5134e-08, 0, 0.515578, 0)

[node name="waist_cast" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0.00254595, 0)

[node name="feet_cast" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, -0.870009, 0)

[node name="new_pos" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18004, -1.08948)

[connection signal="body_entered" from="above_head" to="." method="_on_above_head_body_entered"]
[connection signal="body_exited" from="above_head" to="." method="_on_above_head_body_exited"]
